[package]
name = "battery_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
chrono = "0.4.31"
dashmap = "5.5.3"
once_cell = "1.19.0"
parking_lot = "0.12.1"
rolling-file = "0.2.0"
serialport = "4.3.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
